--- a/dadosempresa.html
+++ b/dadosempresa.html
@@ -128,32 +128,35 @@
       </div>
 
       <!-- Company Registration Form -->
-      <div class="mt-8 bg-white p-6 rounded-lg shadow-md max-w-lg">
-        <h2 class="text-2xl font-semibold mb-4 text-gray-800">Cadastrar Empresa</h2>
+      <div id="modalCadastro" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 hidden">
+        <div class="bg-white p-6 rounded-lg shadow-md max-w-lg w-full mx-4 relative">
+          <button id="closeModalBtn" aria-label="Fechar modal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-2xl font-bold">&times;</button>
+          <h2 class="text-2xl font-semibold mb-4 text-gray-800">Cadastrar Empresa</h2>
           <form id="companyForm" class="space-y-4">
-          <div>
-            <label for="companyName" class="block text-gray-700 font-medium mb-1">Nome da Empresa</label>
-            <input type="text" id="companyName" name="companyName" required class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-          </div>
-          <div>
-            <label for="companyAddress" class="block text-gray-700 font-medium mb-1">Endereço</label>
-            <input type="text" id="companyAddress" name="companyAddress" required class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-          </div>
-          <div>
-            <label for="companyCNPJ" class="block text-gray-700 font-medium mb-1">CNPJ da Empresa</label>
-            <input type="text" id="companyCNPJ" name="companyCNPJ" pattern="\\d{14}" title="Digite o CNPJ com 14 dígitos sem pontos ou traços" class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-          </div>
-          <div>
-            <label for="companyPhone" class="block text-gray-700 font-medium mb-1">Telefone da Empresa</label>
-            <input type="tel" id="companyPhone" name="companyPhone" required class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-          </div>
-          <div>
-            <label for="companyLogo" class="block text-gray-700 font-medium mb-1">Logo da Empresa</label>
-            <input type="file" id="companyLogo" name="companyLogo" accept="image/*" required class="w-full" />
-          </div>
-          <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition">Cadastrar</button>
-        </form>
-        <p id="formMessage" class="mt-4 text-sm"></p>
+            <div>
+              <label for="companyName" class="block text-gray-700 font-medium mb-1">Nome da Empresa</label>
+              <input type="text" id="companyName" name="companyName" required class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+            </div>
+            <div>
+              <label for="companyAddress" class="block text-gray-700 font-medium mb-1">Endereço</label>
+              <input type="text" id="companyAddress" name="companyAddress" required class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+            </div>
+            <div>
+              <label for="companyCNPJ" class="block text-gray-700 font-medium mb-1">CNPJ da Empresa</label>
+              <input type="text" id="companyCNPJ" name="companyCNPJ" pattern="\\d{14}" title="Digite o CNPJ com 14 dígitos sem pontos ou traços" class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+            </div>
+            <div>
+              <label for="companyPhone" class="block text-gray-700 font-medium mb-1">Telefone da Empresa</label>
+              <input type="tel" id="companyPhone" name="companyPhone" required class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+            </div>
+            <div>
+              <label for="companyLogo" class="block text-gray-700 font-medium mb-1">Logo da Empresa</label>
+              <input type="file" id="companyLogo" name="companyLogo" accept="image/*" required class="w-full" />
+            </div>
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition">Cadastrar</button>
+          </form>
+          <p id="formMessage" class="mt-4 text-sm"></p>
+        </div>
       </div>
 
       <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
@@ -236,5 +239,27 @@
     </div>
   </div>
 
+  <button id="openModalBtn" class="fixed inset-0 m-auto bg-blue-500 text-white px-4 py-2 rounded-md shadow-lg hover:bg-blue-600 transition flex items-center justify-center" style="width: max-content; height: max-content;">Cadastrar Empresa</button>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const closeModalBtn = document.getElementById('closeModalBtn');
+      const openModalBtn = document.getElementById('openModalBtn');
+      const modal = document.getElementById('modalCadastro');
+
+      if (closeModalBtn && modal) {
+        closeModalBtn.addEventListener('click', function() {
+          modal.classList.add('hidden');
+        });
+      }
+
+      if (openModalBtn && modal) {
+        openModalBtn.addEventListener('click', function() {
+          modal.classList.remove('hidden');
+        });
+      }
+    });
+  </script>
 </body>
 </html>
+
