--- a/saidaaparelho.html
+++ b/saidaaparelho.html
@@ -111,7 +111,7 @@
     </div>
 
    <!-- Main Content -->
-   <div class="flex-1 p-4 md:w-5/6 overflow-auto">
+   <div class="flex-1 p-4 md:w-5/6 md:ml-64 overflow-auto">
     <div class="flex items-center mb-4 flex-wrap gap-3 justify-center relative">
       <img alt="Logo" class="h-10 mr-auto ml-auto" src="logoprincipal.png"/>
       <div class="flex items-center space-x-4 absolute right-0">
