--- a/saidaaparelho.html
+++ b/saidaaparelho.html
@@ -12,15 +12,15 @@
       #sidebar {
         position: fixed;
         top: 0;
-        left: -100%;
         height: 100%;
         width: 70%;
         max-width: 250px;
         z-index: 50;
-        transition: left 0.3s ease-in-out;
+        transition: transform 0.3s ease-in-out;
+        transform: translateX(-100%);
       }
       #sidebar.open {
-        left: 0;
+        transform: translateX(0);
       }
       #overlay {
         display: none;
@@ -46,12 +46,12 @@
  <body class="bg-white">
   <div class="flex min-h-screen">
     <!-- Botão menu mobile -->
-    <button id="menuBtn" class="md:hidden fixed top-4 left-4 z-60 bg-blue-500 text-white p-3 rounded-md shadow-md focus:outline-none">
+    <button id="menuBtn" class="md:hidden fixed top-4 left-4 z-50 bg-blue-500 text-white p-3 rounded-md shadow-md focus:outline-none">
       <i class="fas fa-bars text-lg"></i>
     </button>
 
     <!-- Overlay para fechar menu -->
-    <div id="overlay" class="hidden"></div>
+    <div id="overlay"></div>
 
   <!-- Sidebar -->
    <div id="sidebar" class="fixed inset-y-0 left-0 w-64 bg-blue-500 p-4 flex flex-col transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
